Added og meta data

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>IT Worker | responsive portfolio template</title>
+    <title>Elías Castañeda's Portfolio</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="all,follow" />
+    <meta property="og:title" content="Elías Castañeda's Portfolio" />
+    <meta property="og:image" content="img/about.jpg" />
+    <meta property="og:description" content="Take a look to my personal portfolio!" />
+    <meta property="og:url" content="https://e71az.github.io/Portfolio/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
     <!-- Font Awesome CSS-->
