Added social icons to nav bar

--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a href="#intro" class="navbar-brand scrollTo">Elías Castañeda</a>
+
+          <div class="col-2 text-center text-lg-left">
+            <p class="social">
+              <a href="#" class="external facebook wow fadeInUp"
+                ><i class="fa fa-github"></i></a
+              ><a
+                href="#"
+                data-wow-delay="0.2s"
+                class="external instagram wow fadeInUp"
+                ><i class="fa fa-instagram"></i></a
+              ><a
+                href="#"
+                data-wow-delay="0.4s"
+                class="external gplus wow fadeInUp"
+                ><i class="fa fa-google-plus"></i></a
+              ><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"
+                ><i class="fa fa-envelope"></i
+              ></a>
+            </p>
+          </div>
+
           <button
             type="button"
             data-toggle="collapse"
@@ -894,28 +915,8 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center text-lg-left">
-            <p class="social">
-              <a href="#" class="external facebook wow fadeInUp"
-                ><i class="fa fa-facebook"></i></a
-              ><a
-                href="#"
-                data-wow-delay="0.2s"
-                class="external instagram wow fadeInUp"
-                ><i class="fa fa-instagram"></i></a
-              ><a
-                href="#"
-                data-wow-delay="0.4s"
-                class="external gplus wow fadeInUp"
-                ><i class="fa fa-google-plus"></i></a
-              ><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"
-                ><i class="fa fa-envelope"></i
-              ></a>
-            </p>
-          </div>
-          <!-- /.6-->
-          <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2018 Your name goes here. All rights reserved.</p>
+          <div class="col-12 text-center mt-4 mt-lg-0">
+            <p>© 2020 Elías Castañeda. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">
