Migrated FA from 4 to 5

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
     <!-- Font Awesome CSS-->
-    <link
-      rel="stylesheet"
-      href="vendor/font-awesome/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/v4-shims.css">
     <!-- Google fonts - Roboto + Roboto Slab-->
     <link
       rel="stylesheet"
@@ -57,23 +55,16 @@
         <div class="container">
           <a href="#intro" class="navbar-brand scrollTo">Elías Castañeda</a>
 
-          <div class="col-2 text-center text-lg-left">
+          <div class="col-2 mt-3 text-center text-lg-left">
             <p class="social">
-              <a href="#" class="external facebook wow fadeInUp"
+              <a href="https://github.com/e71az" class="external github wow fadeInUp"
                 ><i class="fa fa-github"></i></a
               ><a
-                href="#"
+                href="https://www.linkedin.com/in/e71az/"
                 data-wow-delay="0.2s"
-                class="external instagram wow fadeInUp"
-                ><i class="fa fa-instagram"></i></a
-              ><a
-                href="#"
-                data-wow-delay="0.4s"
-                class="external gplus wow fadeInUp"
-                ><i class="fa fa-google-plus"></i></a
-              ><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"
-                ><i class="fa fa-envelope"></i
-              ></a>
+                class="external linkedin wow fadeInUp"
+                ><i class="fab fa-linkedin-in"></i></a
+              >
             </p>
           </div>
 
