Added github and linkedin links

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
           <div class="col-2 mt-3 text-center text-lg-left">
             <p class="social">
-              <a href="#" class="external github wow fadeInUp"
+              <a href="https://github.com/e71az" class="external github wow fadeInUp"
                 ><i class="fa fa-github"></i></a
               ><a
-                href="#"
+                href="https://www.linkedin.com/in/e71az/"
                 data-wow-delay="0.2s"
                 class="external linkedin wow fadeInUp"
                 ><i class="fab fa-linkedin-in"></i
