Fixed social icons in nav bar

--- a/index.html
+++ b/index.html
@@ -61,20 +61,30 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-          <a href="#intro" class="navbar-brand scrollTo">Elías Castañeda</a>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="d-md-flex">
+              <a
+                href="#intro"
+                class="col-12 col-md-6 navbar-brand align-self-center text-center scrollTo"
+                >Elías Castañeda</a
+              >
 
-          <div class="col-2 mt-3 text-center text-lg-left">
-            <p class="social">
-              <a href="https://github.com/e71az" class="external github wow fadeInUp"
-                ><i class="fa fa-github"></i></a
-              ><a
-                href="https://www.linkedin.com/in/e71az/"
-                data-wow-delay="0.2s"
-                class="external linkedin wow fadeInUp"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </p>
+              <div class="col-12 col-md-6 ml-lg-3 d-none d-md-block mt-3 text-center">
+                <p class="social ">
+                  <a
+                    href="https://github.com/e71az"
+                    class="external github  wow fadeInUp"
+                    ><i class="fa fa-github"></i></a
+                  ><a
+                    href="https://www.linkedin.com/in/e71az/"
+                    data-wow-delay="0.2s"
+                    class="external linkedin wow fadeInUp"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </p>
+              </div>
+            </div>
           </div>
 
           <button
@@ -104,7 +114,7 @@
                   >Testimonials</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-nowrap">
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
               <li class="nav-item">
@@ -421,7 +431,7 @@
           <div class="mb-5 text-center">
             <h2 data-animate="fadeInUp" class="title">My work</h2>
             <p data-animate="fadeInUp" class="lead">
-              I have worked on dozens of projects so I have picked only the
+              I have worked on multiple projects so I have picked only the
               latest for you.
             </p>
           </div>
