Added social networks to footer

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 </div>
               </div>
               <div
-                data-category="html"
+                data-category="bootstrap"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
@@ -727,7 +727,7 @@
                 </div>
               </div>
               <div
-                data-category="other"
+                data-category="html"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
@@ -948,7 +948,21 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center mt-4 mt-lg-0">
+          <div class="col-md-6 text-center text-lg-left">
+            <p class="social ">
+              <a
+                href="https://github.com/e71az"
+                class="external github wow fadeInUp"
+                ><i class="fa fa-github"></i></a
+              ><a
+                href="https://www.linkedin.com/in/e71az/"
+                data-wow-delay="0.2s"
+                class="external linkedin wow fadeInUp"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </p>
+          </div>
+          <div class="col-md-6 text-center text-lg-left">
             <p>© 2020 Elías Castañeda. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
