Added Icons to the section before "contact me"

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-1.svg"
+                  src="img/customers/ruby.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
@@ -787,7 +787,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-2.svg"
+                  src="img/customers/python.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
@@ -799,7 +799,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-3.svg"
+                  src="img/customers/html.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
@@ -811,7 +811,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-4.svg"
+                  src="img/customers/css.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
@@ -823,7 +823,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-5.svg"
+                  src="img/customers/javascript.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
@@ -835,7 +835,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6">
               <div class="customer">
                 <img
-                  src="img/customers/logo-6.svg"
+                  src="img/customers/react.png"
                   title="brand logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
