Fixed footer social icons

--- a/index.html
+++ b/index.html
@@ -948,8 +948,8 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center text-lg-left">
-            <p class="social ">
+          <div class="col-md-6 text-center mb-5 mb-md-0 text-lg-center">
+            <p class="social">
               <a
                 href="https://github.com/e71az"
                 class="external github wow fadeInUp"
@@ -962,7 +962,7 @@
               ></a>
             </p>
           </div>
-          <div class="col-md-6 text-center text-lg-left">
+          <div class="col-md-6 text-center align-self-center text-lg-center">
             <p>© 2020 Elías Castañeda. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
