Removed the testimonials section

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
               <li class="nav-item">
                 <a href="#services" class="nav-link link-scroll">Services</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#testimonials" class="nav-link link-scroll"
                   >Testimonials</a
                 >
-              </li>
+              </li> -->
               <li class="nav-item text-nowrap">
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
@@ -257,7 +257,7 @@
       </div>
     </section>
     <!-- Testimonials-->
-    <section id="testimonials" class="testimonials-section bg-gray">
+    <!-- <section id="testimonials" class="testimonials-section bg-gray">
       <div class="container">
         <header class="text-center mb-2">
           <h2 data-animate="fadeInUp" class="title">
@@ -383,7 +383,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Statistics-->
     <section
       id="statistics"
