--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
                 >Elías Castañeda</a
               >
 
-              <div class="col-12 col-md-6 ml-lg-3 d-none d-md-block mt-3 text-center">
-                <p class="social ">
+              <div
+                class="col-12 col-md-6 ml-lg-3 d-none d-md-block mt-3 text-center"
+              >
+                <p class="social">
                   <a
                     href="https://github.com/e71az"
-                    class="external github  wow fadeInUp"
+                    class="external github wow fadeInUp"
                     ><i class="fa fa-github"></i></a
                   ><a
                     href="https://www.linkedin.com/in/e71az/"
@@ -211,35 +213,24 @@
         </header>
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-search"></i></div>
-            <h3 class="heading mb-3 text-400">Consulting</h3>
-            <p class="text-left description">
-              On on produce colonel pointed. Just four sold need over how any.
-              In to september suspicion determine he prevailed admitting. On
-              adapted an as affixed limited on. Giving cousin warmly things no
-              spring mr be abroad. Relation breeding be as repeated strictly
-              followed margaret. One gravity son brought shyness waiting regular
-              led ham.
-            </p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-html5"></i></div>
-            <h3 class="heading mb-3 text-400">HTML coding</h3>
+            <h3 class="heading mb-3 text-400">Front-end development</h3>
             <p class="text-left description">
-              Manor we shall merit by chief wound no or would. Oh towards
-              between subject passage sending mention or it. Sight happy do
-              burst fruit to woody begin at. Assurance perpetual he in oh
-              determine as.
+              I apply Front-end webpages with HTML, CSS, Bootstrap, SCSS, among others.
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
+            <h3 class="heading mb-3 text-400">Back-end development</h3>
             <p class="text-left description">
-              Rooms oh fully taken by worse do. Points afraid but may end law
-              lasted. Was out laughter raptures returned outweigh. Luckily
-              cheered colonel me do we attacks on highest enabled. Tried law yet
-              style child. Bore of true of no be deal.
+              I use Back-end technologies such as Ruby on Rails, Database architecture and Javascript to create performing websites.
+            </p>
+          </div>
+          <div data-animate="fadeInUp" class="col-lg-4">
+            <div class="icon"><i class="fas fa-layer-group"></i></i></div>
+            <h3 class="heading mb-3 text-400 text-nowrap">Full-stack web development</h3>
+            <p class="text-left description">
+              I utilize the aforementioned technologies in combination with powerful testing with Rspec to use test driven development.
             </p>
           </div>
         </div>
