--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
               <li class="nav-item">
-                <a href="#customers" class="nav-link link-scroll">Clients</a>
+                <a href="#customers" class="nav-link link-scroll">Technologies</a>
               </li>
               <li class="nav-item">
                 <a href="#contact" class="nav-link link-scroll">Contact</a>
