--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                     class="sr-only reference-description"
                   >
                     <p>
-                      About The goal of this project was to apply all the
+                      The goal of this project was to apply all the
                       previous knowledge learned like the box model, flex-boxes,
                       grids, media queries and bootstrap while also being
                       provided a real webpage requirement by a fictional client
