--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
                   <a
                     href="https://github.com/e71az"
                     class="external github wow fadeInUp"
+                    target="_blank"
                     ><i class="fa fa-github"></i></a
                   ><a
                     href="https://www.linkedin.com/in/e71az/"
                     data-wow-delay="0.2s"
                     class="external linkedin wow fadeInUp"
+                    target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
                 </p>
@@ -120,7 +122,9 @@
                 <a href="#references" class="nav-link link-scroll">My work</a>
               </li>
               <li class="nav-item">
-                <a href="#customers" class="nav-link link-scroll">Technologies</a>
+                <a href="#customers" class="nav-link link-scroll"
+                  >Technologies</a
+                >
               </li>
               <li class="nav-item">
                 <a href="#contact" class="nav-link link-scroll">Contact</a>
@@ -216,21 +220,26 @@
             <div class="icon"><i class="fa fa-html5"></i></div>
             <h3 class="heading mb-3 text-400">Front-end development</h3>
             <p class="text-left description">
-              I apply Front-end webpages with HTML, CSS, Bootstrap, SCSS, among others.
+              I apply Front-end webpages with HTML, CSS, Bootstrap, SCSS, among
+              others.
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-tachometer"></i></div>
             <h3 class="heading mb-3 text-400">Back-end development</h3>
             <p class="text-left description">
-              I use Back-end technologies such as Ruby on Rails, Database architecture and Javascript to create performing websites.
+              I use Back-end technologies such as Ruby on Rails, Database
+              architecture and Javascript to create performing websites.
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fas fa-layer-group"></i></i></div>
-            <h3 class="heading mb-3 text-400 text-nowrap">Full-stack web development</h3>
+            <div class="icon"><i class="fas fa-layer-group"></i></div>
+            <h3 class="heading mb-3 text-400 text-nowrap">
+              Full-stack web development
+            </h3>
             <p class="text-left description">
-              I utilize the aforementioned technologies in combination with powerful testing with Rspec to use test driven development.
+              I utilize the aforementioned technologies in combination with
+              powerful testing with Rspec to use test driven development.
             </p>
           </div>
         </div>
@@ -485,10 +494,12 @@
                       <a
                         href="https://enigmatic-mesa-94696.herokuapp.com/"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
                         href="https://github.com/e71az/dream-funding/archive/develop.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -522,10 +533,12 @@
                       <a
                         href="https://ancient-forest-74376.herokuapp.com"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
                         href="https://github.com/e71az/social-media/archive/development.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -559,10 +572,12 @@
                       <a
                         href="https://raw.githack.com/e71az/newsweek/development/index.html"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
                         href="https://github.com/e71az/newsweek/archive/master.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -588,19 +603,21 @@
                     class="sr-only reference-description"
                   >
                     <p>
-                      The goal of this project was to apply all the
-                      previous knowledge learned like the box model, flex-boxes,
-                      grids, media queries and bootstrap while also being
-                      provided a real webpage requirement by a fictional client
+                      The goal of this project was to apply all the previous
+                      knowledge learned like the box model, flex-boxes, grids,
+                      media queries and bootstrap while also being provided a
+                      real webpage requirement by a fictional client
                     </p>
                     <p class="buttons text-center">
                       <a
                         href="https://e71az.github.io/visit-chihuahua/"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
                         href="https://github.com/e71az/visit-chihuahua/archive/master.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -633,10 +650,12 @@
                       <a
                         href="https://repl.it/@EliasCastaneda/tic-tac-toe"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code preview</a
                       ><a
                         href="https://github.com/e71az/tic-tac-toe/archive/develop.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -670,10 +689,12 @@
                       <a
                         href="https://repl.it/@EliasCastaneda/CSS-Linter"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code</a
                       ><a
                         href="https://github.com/e71az/CSS-Linter/archive/master.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -707,10 +728,12 @@
                       <a
                         href="https://repl.it/@EliasCastaneda/Enumerables"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code</a
                       ><a
                         href="https://github.com/e71az/Enumerables/archive/development.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -743,10 +766,12 @@
                       <a
                         href="https://raw.githack.com/e71az/thenextweb/development/index.html"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
                         href="https://github.com/e71az/thenextweb/archive/master.zip"
                         class="btn btn-outline-primary"
+                        target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
                       >
                     </p>
@@ -944,11 +969,13 @@
               <a
                 href="https://github.com/e71az"
                 class="external github wow fadeInUp"
+                target="_blank"
                 ><i class="fa fa-github"></i></a
               ><a
                 href="https://www.linkedin.com/in/e71az/"
                 data-wow-delay="0.2s"
                 class="external linkedin wow fadeInUp"
+                target="_blank"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </p>
@@ -959,10 +986,12 @@
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">
               Template by
-              <a href="https://bootstrapious.com/p/bootstrap-carousel"
+              <a
+                href="https://bootstrapious.com/p/bootstrap-carousel"
+                target="_blank"
                 >Bootstrapious</a
               >
-              & <a href="https://fity.cz/ostrava">Fity</a>
+              & <a href="https://fity.cz/ostrava" target="_blank">Fity</a>
             </p>
             <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
           </div>
