--- a/index.html
+++ b/index.html
@@ -177,10 +177,9 @@
               Always eager to be updated and learn how to use the newest
               technologies in the market.
             </p>
-            <p>An entrepreneur by heart and geek in a day to day basis :)</p>
+            <p>An entrepreneur by heart and geek on a day to day basis :)</p>
             <p>
-              Feel free to contact me if you think that I am a great addition to
-              your team!
+              Feel free to contact me if you think that I would be a great addition to your team!
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-6">
