Added third social network

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
+                  <a
+                    href="https://angel.co/u/eliasecasta"
+                    class="external github wow fadeInUp"
+                    target="_blank"
+                    ><i class="fa fa-angellist"></i
+                  ></a>
                 </p>
               </div>
             </div>
@@ -179,7 +185,8 @@
             </p>
             <p>An entrepreneur by heart and geek on a day to day basis :)</p>
             <p>
-              Feel free to contact me if you think that I would be a great addition to your team!
+              Feel free to contact me if you think that I would be a great
+              addition to your team!
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-6">
@@ -976,6 +983,12 @@
                 class="external linkedin wow fadeInUp"
                 target="_blank"
                 ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a
+                href="https://angel.co/u/eliasecasta"
+                class="external github wow fadeInUp"
+                target="_blank"
+                ><i class="fa fa-angellist"></i
               ></a>
             </p>
           </div>
