Edit: Front-end description

--- a/index.html
+++ b/index.html
@@ -66,12 +66,24 @@
             <div class="d-md-flex">
               <a
                 href="#intro"
-                class="col-12 col-md-6 navbar-brand align-self-center text-center scrollTo"
+                class="
+                  col-12 col-md-6
+                  navbar-brand
+                  align-self-center
+                  text-center
+                  scrollTo
+                "
                 >Elías Castañeda</a
               >
 
               <div
-                class="col-12 col-md-6 ml-lg-3 d-none d-md-block mt-3 text-center"
+                class="
+                  col-12 col-md-6
+                  ml-lg-3
+                  d-none d-md-block
+                  mt-3
+                  text-center
+                "
               >
                 <p class="social">
                   <a
@@ -226,8 +238,8 @@
             <div class="icon"><i class="fa fa-html5"></i></div>
             <h3 class="heading mb-3 text-400">Front-end development</h3>
             <p class="text-left description">
-              I apply Front-end webpages with HTML, CSS, Bootstrap, SCSS, among
-              others.
+              I apply Front-end webpages with Bootstrap, SCSS, React & Redux
+              toolkit, among others.
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
