Fix: Linked in link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     target="_blank"
                     ><i class="fa fa-github"></i></a
                   ><a
-                    href="https://www.linkedin.com/in/e71az/"
+                    href="https://www.linkedin.com/in/eliasecasta/"
                     data-wow-delay="0.2s"
                     class="external linkedin wow fadeInUp"
                     target="_blank"
@@ -990,7 +990,7 @@
                 target="_blank"
                 ><i class="fa fa-github"></i></a
               ><a
-                href="https://www.linkedin.com/in/e71az/"
+                href="https://www.linkedin.com/in/eliasecasta/"
                 data-wow-delay="0.2s"
                 class="external linkedin wow fadeInUp"
                 target="_blank"
