Add react project flavourbomb to the My Work section

--- a/index.html
+++ b/index.html
@@ -764,30 +764,32 @@
               >
                 <div class="reference">
                   <a href="#"
-                    ><img src="img/next.png" alt="" class="img-fluid" />
+                    ><img src="img/flavourbomb.png" alt="" class="img-fluid" />
                     <div class="overlay">
                       <div class="inner">
-                        <h3 class="h4 reference-title">The Next Web clone</h3>
+                        <h3 class="h4 reference-title">Flavourbomb</h3>
+                        <p>A catalogue of recipes!</p>
                       </div>
                     </div></a
                   >
                   <div
-                    data-images="img/next1.png,img/next2.png,img/next3.png,img/next4.png,img/next5.png"
+                    data-images="img/flavourbomb2.png,img/flavourbomb3.png,img/flavourbomb4.png"
                     class="sr-only reference-description"
                   >
                     <p>
-                      The goal of this project was to learn about responsive
-                      media queries and to apply them to create 3 different web
-                      views for The Next Web site.
+                      This is the Flavour Bomb Capstone project, a catalogue of
+                      recipes where users are able to navigate different recipes
+                      from a public API. Testing done with React testing library
+                      and app deployment done to Netlify.
                     </p>
                     <p class="buttons text-center">
                       <a
-                        href="https://raw.githack.com/e71az/thenextweb/development/index.html"
+                        href="https://flavourbomb.netlify.app/home"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/thenextweb/archive/master.zip"
+                        href="https://github.com/e71az/flavour-bomb/archive/master.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
