Add React & Redux category filter

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <li class="active"><a href="#" data-filter="all">All</a></li>
             <li><a href="#" data-filter="rails">Rails</a></li>
             <li><a href="#" data-filter="bootstrap">Bootstrap</a></li>
-            <li><a href="#" data-filter="html">HTML & CSS</a></li>
+            <li><a href="#" data-filter="html">React & Redux</a></li>
             <li><a href="#" data-filter="other">Other</a></li>
           </ul>
           <div id="detail">
