--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <li class="active"><a href="#" data-filter="all">All</a></li>
             <li><a href="#" data-filter="rails">Rails</a></li>
             <li><a href="#" data-filter="bootstrap">Bootstrap</a></li>
-            <li><a href="#" data-filter="html">React & Redux</a></li>
+            <li><a href="#" data-filter="react">React & Redux</a></li>
             <li><a href="#" data-filter="other">Other</a></li>
           </ul>
           <div id="detail">
@@ -759,7 +759,7 @@
                 </div>
               </div>
               <div
-                data-category="html"
+                data-category="react"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
