Add technology descriptions to each project and add alt description to the technology logos

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <li><a href="#" data-filter="rails">Rails</a></li>
             <li><a href="#" data-filter="bootstrap">Bootstrap</a></li>
             <li><a href="#" data-filter="react">React & Redux</a></li>
-            <li><a href="#" data-filter="other">Other</a></li>
+            <li><a href="#" data-filter="ruby">Ruby</a></li>
           </ul>
           <div id="detail">
             <div class="row">
@@ -489,7 +489,9 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Dream Funding</h3>
-                        <p>Fund your selfish dreams!</p>
+                        <p>
+                          Fund your selfish dreams, made with Ruby on Rails!
+                        </p>
                       </div>
                     </div></a
                   >
@@ -534,7 +536,10 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Social Media</h3>
-                        <p>Mutual friendships</p>
+                        <p>
+                          Mutual friendships social network made with Ruby on
+                          Rails!
+                        </p>
                       </div>
                     </div></a
                   >
@@ -573,7 +578,7 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Newsweek clone</h3>
-                        <p>News webpage</p>
+                        <p>News webpage made with Bootstrap!</p>
                       </div>
                     </div></a
                   >
@@ -612,7 +617,10 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Visit Chihuahua</h3>
-                        <p>Monument finder for Chihuahua City</p>
+                        <p>
+                          Monument finder for Chihuahua City made with
+                          Bootstrap!
+                        </p>
                       </div>
                     </div></a
                   >
@@ -643,7 +651,7 @@
                 </div>
               </div>
               <div
-                data-category="other"
+                data-category="ruby"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
@@ -652,7 +660,7 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Tic Tac Toe</h3>
-                        <p>The Tic Tac Toe console game!</p>
+                        <p>The Tic Tac Toe console game in Ruby!</p>
                       </div>
                     </div></a
                   >
@@ -681,7 +689,7 @@
                 </div>
               </div>
               <div
-                data-category="other"
+                data-category="ruby"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
@@ -690,7 +698,7 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">CSS Linter</h3>
-                        <p>CSS code linter</p>
+                        <p>CSS code linter in Ruby!</p>
                       </div>
                     </div></a
                   >
@@ -720,7 +728,7 @@
                 </div>
               </div>
               <div
-                data-category="other"
+                data-category="ruby"
                 class="reference-item col-lg-3 col-md-6"
               >
                 <div class="reference">
@@ -768,7 +776,10 @@
                     <div class="overlay">
                       <div class="inner">
                         <h3 class="h4 reference-title">Flavourbomb</h3>
-                        <p>A catalogue of recipes!</p>
+                        <p>
+                          A catalogue of recipes made with a food API and React
+                          & Redux!
+                        </p>
                       </div>
                     </div></a
                   >
@@ -812,10 +823,10 @@
               <div class="customer">
                 <img
                   src="img/customers/ruby.png"
-                  title="brand logo"
+                  title="Ruby logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="Ruby logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -824,10 +835,10 @@
               <div class="customer">
                 <img
                   src="img/customers/python.png"
-                  title="brand logo"
+                  title="Python logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="Python logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -836,10 +847,10 @@
               <div class="customer">
                 <img
                   src="img/customers/html.png"
-                  title="brand logo"
+                  title="HTML 5 logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="HTML 5 logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -848,10 +859,10 @@
               <div class="customer">
                 <img
                   src="img/customers/css.png"
-                  title="brand logo"
+                  title="Boostrap logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="Boostrap logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -860,10 +871,10 @@
               <div class="customer">
                 <img
                   src="img/customers/javascript.png"
-                  title="brand logo"
+                  title="Javascript logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="Javascript logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -872,10 +883,10 @@
               <div class="customer">
                 <img
                   src="img/customers/react.png"
-                  title="brand logo"
+                  title="React logo"
                   data-placement="bottom"
                   data-toggle="tooltip"
-                  alt=""
+                  alt="React logo"
                   class="img-fluid d-block mx-auto"
                 />
               </div>
@@ -1007,7 +1018,7 @@
             </p>
           </div>
           <div class="col-md-6 text-center align-self-center text-lg-center">
-            <p>© 2020 Elías Castañeda. All rights reserved.</p>
+            <p>© 2021 Elías Castañeda. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">
