--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       property="og:description"
       content="Take a look to my personal portfolio!"
     />
-    <meta property="og:url" content="https://e71az.github.io/Portfolio/" />
+    <meta property="og:url" content="https://eliasecasta.github.io/Portfolio/" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
@@ -87,7 +87,7 @@
               >
                 <p class="social">
                   <a
-                    href="https://github.com/e71az"
+                    href="https://github.com/eliasecasta"
                     class="external github wow fadeInUp"
                     target="_blank"
                     ><i class="fa fa-github"></i></a
@@ -517,7 +517,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/dream-funding/archive/develop.zip"
+                        href="https://github.com/eliasecasta/dream-funding/archive/develop.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -559,7 +559,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/social-media/archive/development.zip"
+                        href="https://github.com/eliasecasta/social-media/archive/development.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -593,12 +593,12 @@
                     </p>
                     <p class="buttons text-center">
                       <a
-                        href="https://raw.githack.com/e71az/newsweek/development/index.html"
+                        href="https://raw.githack.com/eliasecasta/newsweek/development/index.html"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/newsweek/archive/master.zip"
+                        href="https://github.com/eliasecasta/newsweek/archive/master.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -636,12 +636,12 @@
                     </p>
                     <p class="buttons text-center">
                       <a
-                        href="https://e71az.github.io/visit-chihuahua/"
+                        href="https://eliasecasta.github.io/visit-chihuahua/"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/visit-chihuahua/archive/master.zip"
+                        href="https://github.com/eliasecasta/visit-chihuahua/archive/master.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -679,7 +679,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code preview</a
                       ><a
-                        href="https://github.com/e71az/tic-tac-toe/archive/develop.zip"
+                        href="https://github.com/eliasecasta/tic-tac-toe/archive/develop.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -718,7 +718,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code</a
                       ><a
-                        href="https://github.com/e71az/CSS-Linter/archive/master.zip"
+                        href="https://github.com/eliasecasta/CSS-Linter/archive/master.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -757,7 +757,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit live code</a
                       ><a
-                        href="https://github.com/e71az/Enumerables/archive/development.zip"
+                        href="https://github.com/eliasecasta/Enumerables/archive/development.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -800,7 +800,7 @@
                         target="_blank"
                         ><i class="fa fa-globe"></i> Visit website</a
                       ><a
-                        href="https://github.com/e71az/flavour-bomb/archive/master.zip"
+                        href="https://github.com/eliasecasta/flavour-bomb/archive/master.zip"
                         class="btn btn-outline-primary"
                         target="_blank"
                         ><i class="fa fa-download"></i> Download code</a
@@ -998,7 +998,7 @@
           <div class="col-md-6 text-center mb-5 mb-md-0 text-lg-center">
             <p class="social">
               <a
-                href="https://github.com/e71az"
+                href="https://github.com/eliasecasta"
                 class="external github wow fadeInUp"
                 target="_blank"
                 ><i class="fa fa-github"></i></a
